adding first html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-test
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>TeaCozy</title>
+  </head>
+  <body>
+
+<!--Start Header-->
+    <div class="header">
+      <img src="./resources/images/img-tea-cozy-logo.png">
+      <nav>
+        <span><a href="#"> Mission</a>
+        <span><a href="#">Featured Tea</a></span>
+        <span><a href="#">Locations</a></span>
+      </nav>
+    </div>
+<!--End header-->
+
+<!--Mainpicture with Header "Our Mission"-->
+<div class="Titel">
+  <h2>Our Mission</h2>
+  <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+</div>
+<!--End of top Header-->
+
+<!--Midsection-->
+<div class="Mid">
+  <h2>Tea of the Month</h2>
+  <h4>What's Steeping at The Tea Cozy?</h4>
+</div>
+
+
+  </body>
+</html>
