--- a/index.html
+++ b/index.html
@@ -3,32 +3,38 @@
   <head>
     <meta charset="utf-8">
     <title>TeaCozy</title>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
 
 <!--Start Header-->
-    <div class="header">
-      <img src="./resources/images/img-tea-cozy-logo.png">
+<header class="f-container">
+        <img src="./resources/images/img-tea-cozy-logo.png">
       <nav>
-        <span><a href="#"> Mission</a>
+        <span><a href="#">Mission</a>
         <span><a href="#">Featured Tea</a></span>
         <span><a href="#">Locations</a></span>
       </nav>
-    </div>
+</header>
 <!--End header-->
 
-<!--Mainpicture with Header "Our Mission"-->
-<div class="Titel">
-  <h2>Our Mission</h2>
-  <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-</div>
-<!--End of top Header-->
 
-<!--Midsection-->
-<div class="Mid">
-  <h2>Tea of the Month</h2>
-  <h4>What's Steeping at The Tea Cozy?</h4>
+<div class="Maincontainer">
+  <div id="Our-mission" class="f-container"> <!--Not sure why this works, but if I set the "Our-mission" to an ID instead of a class we have a centered text over the picutre-->
+    <div class="om-text">
+      <h2>Our Mission</h2>
+      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </div>
+  </div>
+  <div class="Tea-month">
+
+  </div>
+  <div class="Locations">
+
+  </div>
 </div>
+
+
 
 
   </body>
