--- a/index.html
+++ b/index.html
@@ -18,17 +18,43 @@
 </header>
 <!--End header-->
 
+<!--Main content Star-->
 
 <div class="Maincontainer">
-  <div id="Our-mission" class="f-container"> <!--Not sure why this works, but if I set the "Our-mission" to an ID instead of a class we have a centered text over the picutre-->
+  <div id="Our-mission" class="f-container">
     <div class="om-text">
       <h2>Our Mission</h2>
       <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
     </div>
   </div>
-  <div class="Tea-month">
-
+  <div id="Tea-month">
+    <h2>Tea of the Month</h2>
+    <h4>What's Steeping at The Tea Cozy?</h4>
+    <div class="f-container Pics">
+    <div class="Pics">
+      <img src="./resources/images/img-berryblitz.jpg">
+      <span>Fall Berry Blitz Tea</span>
+    </div>
+    <div class="Pics">
+      <img src="./resources/images/img-spiced-rum.jpg">
+      <span>Spiced Rum Tea</span>
+    </div>
+    <div class="Pics">
+      <img src="./resources/images/img-donut.jpg">
+      <span>Seasonal Donuts</span>
+    </div>
+    <div class="Pics">
+      <img src="./resources/images/img-myrtle-ave.jpg">
+      <span>Myrtle Ave Tea</span>
+    </div>
+    <div class="Pics">
+      <img src="./resources/images/img-bedford-bizarre.jpg">
+      <span>Bedford Bizarre Tea</span>
+    </div>
   </div>
+</div>
+
+
   <div class="Locations">
 
   </div>
