--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
       <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
     </div>
   </div>
+
+
+
   <div id="Tea-month">
     <h2>Tea of the Month</h2>
     <h4>What's Steeping at The Tea Cozy?</h4>
-    <div class="f-container Pics">
+    <div class="f-container">
     <div class="Pics">
       <img src="./resources/images/img-berryblitz.jpg">
       <span>Fall Berry Blitz Tea</span>
@@ -54,13 +57,46 @@
   </div>
 </div>
 
+<!--End of store-->
 
-  <div class="Locations">
-
+<!--Start of Locations-->
+  <div id="Locations">
+    <h2>Locations</h2>
+    <div class="f-container">
+    <div class="Locate">
+      <h3>Downtown</h3>
+      <p>384 West 4th St</p>
+      <p>Suite 108</p>
+      <p>Portland, Maine</p>
+    </div>
+    <div class="Locate">
+      <h3>East Bayside</h3>
+      <p>3433 Phisherman's Avenue</p>
+      <p>(Northwest Corner)</p>
+      <p>Portland, Maine</p>
+    </div>
+    <div class="Locate">
+      <h3>Oakdale</h3>
+      <p>515 Cresent Avenue</p>
+      <p>Second Floor</p>
+      <p>Portland, Maine</p>
+    </div>
   </div>
 </div>
+<!--- End of Loctiona -->
 
+<!--- contact Start -->
+<div id="contact">
+  <h2>The Tea Cozy</h2>
+  <h5>contact@theteacozy.com</h5>
+  <p>917-555-8904</p>
+</div>
 
+</div>
+
+<footer>
+<h5>copyright The Tea Cozy 2017</h5>
+</footer>
 
 
   </body>
